--- a/self.conf
+++ b/self.conf
@@ -17,7 +17,7 @@ geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://github.com/KOP-
 profile_img_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
 # server_check_url 
 # Quantumult X 会对指定的网址进行相应测试，以确认节点的可用性
-etwork_check_url=http://www.baidu.com/
+network_check_url=http://www.baidu.com/
 server_check_url=http://www.gstatic.com/generate_204
 
 #第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你需要全局代理的wifi名（这个一般不需要随便写就行）
