--- a/Quantumult X/iPhone.conf
+++ b/Quantumult X/iPhone.conf
@@ -8,7 +8,7 @@
 ;profile_img_url =http://www.example.com/example.png
 
 # 给 Quantumult X 添加资源解析器
-resource_parser_url =https://github.com/KOP-XIAO/QuantumultX/blob/master/Scripts/resource-parser.js
+resource_parser_url =https://fastly.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
 
 # geo_location_checker 用于节点页面的信息展示，可完整自定义
 geo_location_checker =http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
